fixed the error of enrollment request and added the same on instructor side

--- a/templates/administration/batch/batch.html
+++ b/templates/administration/batch/batch.html
@@ -296,7 +296,7 @@ active
                                 </div>
                                 <div class="timeline-badge-wrap d-flex flex-column align-items-center">
                                     <span
-                                        class="timeline-badge border-2 border border-{{ session.get_meeting_status.color }} flex-shrink-0 my-8"></span>
+                                        class="timeline-badge border-2 border-{{ session.get_meeting_status.color }} flex-shrink-0 my-8"></span>
                                     <span class="timeline-badge-border d-block flex-shrink-0"></span>
                                 </div>
                                 <div class="timeline-desc fs-3  mt-n1">{{ session.session_time }}
@@ -334,7 +334,7 @@ active
                                 <div class="timeline-time  flex-shrink-0 text-end">Not Available</div>
                                 <div class="timeline-badge-wrap d-flex flex-column align-items-center">
                                     <span
-                                        class="timeline-badge border-2 border border-primary flex-shrink-0 my-8"></span>
+                                        class="timeline-badge border-2 border-primary flex-shrink-0 my-8"></span>
                                     <span class="timeline-badge-border d-block flex-shrink-0"></span>
                                 </div>
                                 <div class="timeline-desc fs-3  mt-n1 fw-semibold">Coming Soon!
@@ -344,7 +344,7 @@ active
                                 <div class="timeline-time  flex-shrink-0 text-end">Not Available</div>
                                 <div class="timeline-badge-wrap d-flex flex-column align-items-center">
                                     <span
-                                        class="timeline-badge border-2 border border-success flex-shrink-0 my-8"></span>
+                                        class="timeline-badge border-2 border-success flex-shrink-0 my-8"></span>
                                     <span class="timeline-badge-border d-block flex-shrink-0"></span>
                                 </div>
                                 <div class="timeline-desc fs-3  mt-n1 fw-semibold">Coming Soon!
@@ -354,7 +354,7 @@ active
                                 <div class="timeline-time  flex-shrink-0 text-end">Not Available</div>
                                 <div class="timeline-badge-wrap d-flex flex-column align-items-center">
                                     <span
-                                        class="timeline-badge border-2 border border-danger flex-shrink-0 my-8"></span>
+                                        class="timeline-badge border-2 border-danger flex-shrink-0 my-8"></span>
                                     <span class="timeline-badge-border d-block flex-shrink-0"></span>
                                 </div>
                                 <div class="timeline-desc fs-3  mt-n1 fw-semibold">Coming Soon!
@@ -364,7 +364,7 @@ active
                                 <div class="timeline-time  flex-shrink-0 text-end">Not Available</div>
                                 <div class="timeline-badge-wrap d-flex flex-column align-items-center">
                                     <span
-                                        class="timeline-badge border-2 border border-warning flex-shrink-0 my-8"></span>
+                                        class="timeline-badge border-2 border-warning flex-shrink-0 my-8"></span>
                                 </div>
                                 <div class="timeline-desc fs-3  mt-n1 fw-semibold">Coming Soon!
                                 </div>
