--- a/templates/instructor/batch/batch.html
+++ b/templates/instructor/batch/batch.html
@@ -50,7 +50,15 @@ active
         <div class="">
             <a href="{% url 'instructor_pod_for_batch' batch.slug %}"
                 class="btn btn-outline-primary button mt-n3 m-3 w-25">Set POD</a>
+
+                <a href="{% url 'instructor_batch_enrollment_requests' batch.slug %}"
+                class="btn btn-outline-warning button mt-n3 m-3 w-25">Enrollment Requests</a>
+
+                <a href="{% url 'administrator_batch_leaderboard' batch.slug %}"
+                class="btn btn-outline-secondary button mt-n3 m-3 w-25">Leaderboard</a>
         </div>
+
+
     </div>
 
 
