--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -16,6 +16,8 @@
     </title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+
 
     {% block css %}
     {% endblock %}
@@ -57,13 +59,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'our_team' %}">Our Team</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link article-link" style="text-decoration: underline;
+                        color: rgb(255, 165, 62);" href="{% url 'articles' %}">Articles</a>
+                    </li>
                     <!--  <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li> -->
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
-                        
+
                     <li class="nav-item mx-1">
 
                         {% if user_type == 'student' %}
@@ -77,7 +84,7 @@
                         <a href="{% url 'administration' %}">
                             <button style="width: 100%;">Dashboard</button>
                         </a>
-                        
+
                         {% endif %}
                     </li>
 
@@ -151,11 +158,13 @@
                             </div>
                             <div class="footer-social-icon">
                                 <span>Socials</span>
-                                <a href="#"><i class="fab fa-linkedin twitter-bg"></i></a>
-                                <a href="#"><i class="fab fa-instagram google-bg"></i></a>
+                                <a target="_blank" href="https://www.linkedin.com/company/the-angaar-batch"><i
+                                        class="fab fa-linkedin twitter-bg"></i></a>
+                                <a target="_blank" href="https://www.instagram.com/the_angaar_batch/"><i
+                                        class="fab fa-instagram google-bg"></i></a>
                                 <!-- <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                                    <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                                    <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a> -->
+                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -167,8 +176,8 @@
                             <ul>
                                 <li><a href="{% url 'home' %}">Home</a></li>
                                 <li><a href="{% url 'about' %}">About</a></li>
-                                <!-- <li><a href="#">Services</a></li>
-                                <li><a href="#">Portfolio</a></li> -->
+                                 <li><a href="{% url 'articles' %}">Job Articles</a></li>
+                                <!--<li><a href="#">Portfolio</a></li> -->
                                 <li><a href="#">Contact</a></li>
                                 <li><a href="{% url 'our_team' %}">Our Team</a></li>
                                 <!-- <li><a href="#">Latest Going On</a></li> -->
@@ -200,7 +209,7 @@
                 <div class="row">
                     <div class="text-center text-lg-left">
                         <div class="copyright-text">
-                            <p>Copyright &copy; 2024, All Right Reserved <a href="#" style="pointer-events: none;">The
+                            <p>Copyright &copy; 2025, All Right Reserved <a href="#" style="pointer-events: none;">The
                                     Angaar Batch 🔥</a></p>
                         </div>
                     </div>
@@ -208,11 +217,12 @@
                 </div>
             </div>
         </div>
+        <a target="_blank" href="https://www.w3grads.com/">
         <div class="powered-by" style="position: absolute">
-            <h5 class="text-white">Powered By</h5>
-            <img src="{% static 'img/home/w3logo.png' %}"
-                class="logo-img" alt="W3Grads Logo">
-        </div>
+                <h5 class="text-white">Powered By</h5>
+                <img src="{% static 'img/home/w3logo.png' %}" class="logo-img" alt="W3Grads Logo">
+            </div>
+        </a>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
