added the articles CRUD on admin side

--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -232,6 +232,16 @@
                             </a>
                         </li>
 
+                        <li class="sidebar-item">
+                            <a class="sidebar-link {% block article_active %} {% endblock %}"
+                                href="{% url 'administrator_articles' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-article"></i>
+                                </span>
+                                <span class="hide-menu">Articles</span>
+                            </a>
+                        </li>
+
                         <!-- ============================ BATCH WORK ============================== -->
 
 
