--- a/templates/home/articles.html
+++ b/templates/home/articles.html
@@ -121,7 +121,7 @@ Articles
                 <div class="card">
                     <div class="card-body">
                         <h6 class="card-title fw-bold">{{ article.title }}</h6>
-                        <p class="card-text">{{ article.content|truncatewords:5 }}</p>
+                        <p class="card-text">{{ article.content|truncatechars:5 }}</p>
                         <p class="text-white-50 fs-7">{{ article.created_at }}</p>
                         <a href="{% url 'article' article.slug %}" class="btn btn-custom">Read More</a>
                     </div>
