--- a/templates/home/articles.html
+++ b/templates/home/articles.html
@@ -94,7 +94,6 @@ Articles
         background-color: rgb(44, 212, 18);
         color: white;
     }
-
 </style>
 
 {% endblock %}
@@ -114,24 +113,25 @@ Articles
                 </div>
             </div>
             {% endif %}
-            
+
             {% for article in articles %}
 
             <div class="col-md-4">
+                <a href="{% url 'article' article.slug %}" style="text-decoration: none; color:white;">
                 <div class="card">
-                    <div class="card-body">
-                        <h6 class="card-title fw-bold">{{ article.title }}</h6>
-                        <p class="card-text">{{ article.content|truncatechars:5 }}</p>
-                        <p class="text-white-50 fs-7">{{ article.created_at }}</p>
-                        <a href="{% url 'article' article.slug %}" class="btn btn-custom">Read More</a>
+                        <div class="card-body">
+                            <h6 class="card-title fw-bold">{{ article.title }}</h6>
+                            <p class="card-text">{{ article.content|truncatechars:5 }}</p>
+                            <p class="text-white-50 fs-7">{{ article.created_at }}</p>
+                            <a href="{% url 'article' article.slug %}" class="btn btn-custom">Read More</a>
+                        </div>
+                        <img src="{{ article.thumbnail.url }}" class="card-img-top" alt="Nature's Calm">
                     </div>
-                    <img src="{{ article.thumbnail.url }}" class="card-img-top"
-                        alt="Nature's Calm">
+                </a>
                 </div>
-            </div>
 
             {% endfor %}
-            
+
         </div>
     </div>
 
