--- a/templates/home/article.html
+++ b/templates/home/article.html
@@ -101,6 +101,14 @@ Article | {{ article.title }}
         font-size: 0.9em;
     }
 
+    @media (max-width: 768px) {
+        .container {
+            padding-right: 10px;
+            padding-left: 10px;
+            padding-top: 15%;
+        }
+    }
+
 </style>
 
 <style>
