--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -62,7 +62,7 @@
 
                     <li class="nav-item">
                         <a class="nav-link article-link" style="text-decoration: underline;
-                        color: rgb(255, 165, 62);" href="{% url 'articles' %}">Articles</a>
+                        color: rgb(255, 165, 62);" href="{% url 'articles' %}">Job Articles</a>
                     </li>
                     <!--  <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
