--- a/templates/home/articles.html
+++ b/templates/home/articles.html
@@ -119,9 +119,8 @@ Articles
             <div class="col-md-4">
                 <a href="{% url 'article' article.slug %}" style="text-decoration: none; color:white;">
                     <div class="card p-0">
-                        <div class="card-body">
+                        <div class="card-body px-2">
                             <h6 class="card-title fw-bold">{{ article.title }}</h6>
-                            <p class="card-text">{{ article.content|truncatechars:5 }}</p>
                             <p class="text-white-50 fs-7">{{ article.created_at }}</p>
                             <a href="{% url 'article' article.slug %}" class="btn btn-custom">Read More</a>
                         </div>
