--- a/templates/home/articles.html
+++ b/templates/home/articles.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-Articles
+Job Articles
 {% endblock %}
 
 {% block css %}
@@ -80,20 +80,7 @@ Articles
         flex: 1;
     }
 
-    .btn-custom {
-        background-color: transparent;
-        border: 1px solid rgb(44, 212, 18);
-        color: rgb(53, 165, 35);
-        padding: 5px 12px;
-        border-radius: 6px;
-        font-size: 14px;
-        transition: 0.3s;
-    }
-
-    .btn-custom:hover {
-        background-color: rgb(44, 212, 18);
-        color: white;
-    }
+    
 </style>
 
 {% endblock %}
