--- a/templates/administration/articles/article.html
+++ b/templates/administration/articles/article.html
@@ -194,7 +194,7 @@
 
                 <div class="col-md-6">
                     <div class="d-flex justify-content-end">
-                        <a id="view-submission" href="#" class="badge bg-dark fs-5 mx-1">✏️</a>
+                        <a id="view-submission" href="{% url 'administrator_edit_article' article.id %}" class="badge bg-dark fs-5 mx-1">✏️</a>
                         <a id="view-submission" href="{% url 'administrator_delete_article' article.id %}" onclick="return confirm('Are you sure you want to delete this article?')" class="badge bg-dark fs-4 mx-1">❌</a>
                         <!-- <a id="view-submission" class="badge bg-dark mx-1 disabled">❤️ 23</a> -->
                     </div>
