--- a/templates/home/article.html
+++ b/templates/home/article.html
@@ -156,7 +156,7 @@ Article | {{ article.title }}
             </div>
             <div class="blur-overlay">
                 <span class="mx-2 interesting-txt">Interesting?</span>
-                <a href="{% url 'login' %}">
+                <a href="{% url 'login' %}?next={{ request.path }}">
                     <button style="width: 100%;">Login</button>
                 </a>
                 <span class="mx-1">OR</span>
