added edit_article and fixed naman pic

--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -371,7 +371,7 @@
             <div class="team-card">
                 <div class="team-img-wrapper">
                     <img class="team-img"
-                        src="https://media.licdn.com/dms/image/v2/D5635AQG6NVmir9pgtg/profile-framedphoto-shrink_400_400/profile-framedphoto-shrink_400_400/0/1707228328063?e=1739080800&v=beta&t=B4QKu2Ewc2oUAFDt9HADk42KZWvfN7gcwrrDjFXh_t4"
+                        src="{% static 'img/home/namansharma.jpeg' %}"
                         width="85%">
                 </div>
                 <div class="team-card-content">
