--- a/templates/administration/practice/test_code.html
+++ b/templates/administration/practice/test_code.html
@@ -223,14 +223,14 @@ Test Code | {{ question.title }}
         </div>
 
         {% endautoescape %}
-        
+
         {% endif %}
 
         {% autoescape off %}
 
         <div class="card-body mb-n7">
             <h6 class="card-title">Description:</h6>
-            <p>{{ question.description }}</p>
+            <p>{{ question.description|linebreaks }}</p>
         </div>
 
         {% endautoescape %}
