implemented visible/complete driver code system

--- a/templates/practice/problem.html
+++ b/templates/practice/problem.html
@@ -785,7 +785,7 @@
                     .then(data => {
                         if (data.success) {
                             editor.setValue(data.code, -1);
-                            editor.session.foldAll();
+                            // editor.session.foldAll();
 
                         } else {
                             editor.setValue("// Driver code not found for this language", -1);
