--- a/templates/home/articles.html
+++ b/templates/home/articles.html
@@ -43,11 +43,12 @@ Job Articles
         width: 100%;
     }
 
-    .container {
+    
+
+    .main-container {
         max-width: 1380px;
-        margin: 0 auto;
-        padding: 0 15px;
-        width: 100%;
+        padding: 0 30px;
+        padding-top: 8%;
     }
 
     .card {
@@ -155,7 +156,7 @@ Job Articles
 
 {% block body %}
 
-<div class="container-block container">
+<div class="container-block main-container">
     <h1 class="fw-bold text-center" style="font-size: 50px;">Job Articles🔥</h1>
     <div class="container mt-2">
         <div class="row g-4 mt-3 mb-4">
