--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -24,7 +24,7 @@
         </div>
 
 
-        <div class="powered-by">
+        <div class="powered-by" style="background-color: rgba(0, 0, 0, 0.6);">
             <h5 class="text-white">Powered By</h5>
             <img src="{% static 'img/home/w3logo.png' %}"
                 class="logo-img" alt="W3Grads Logo">
